kubernetes/catalog/heimdall/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/linuxserver/templates/main/unraid/heimdall.xml
# Category: Network-Web, Tools-Utilities
# Stars: 1157 | Downloads: 585987119
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: heimdall
  labels:
    app.kubernetes.io/name: heimdall
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: heimdall
  template:
    metadata:
      labels:
        app.kubernetes.io/name: heimdall
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: heimdall
          image: lscr.io/linuxserver/heimdall
          ports:
            - containerPort: 80
              protocol: TCP
              name: webui
            - containerPort: 443
              protocol: TCP
              name: port-443
          startupProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: heimdall-data-0
              mountPath: "/config"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: heimdall-data-0
        persistentVolumeClaim:
          claimName: heimdall-data-0
---
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: heimdall
  labels:
    app.kubernetes.io/name: heimdall
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: heimdall
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: webui
    - port: 443
      targetPort: 443
      protocol: TCP
      name: port-443
  type: ClusterIP
