kubernetes/catalog/heimdall/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: heimdall
  namespace: heimdall
  labels:
    app.kubernetes.io/name: heimdall
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`heimdall.apps.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: heimdall
          port: 80
  tls:
    secretName: int-rlservers-com-tls
